--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ flutter:
   uses-material-design: true
 
   assets:
-  - assets/image/depositphotos_113092424-stock-illustration-planet-space-2.jpg
+  - assets/image/blavnco.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
